# openwrt-tests

./: .gitignore  Makefile  README.md  labnet.yaml  pyproject.toml
.github/workflows/: daily.yml  formal.yml  healthcheck.yml  makefile.yml  pull_requests.yml  qemu.yml  real.yml  snapshots.yml
ansible/: inventory.ini  playbook_labgrid.yml
ansible/files/: labgrid-bound-connect
ansible/files/coordinator/: labgrid-coordinator.service  places.yaml.j2
ansible/files/exporter/: dnsmasq-labgrid-leinelab.conf  dnsmasq.conf  labgrid-aparcar.yaml  labgrid-bastian.yaml  (+12 more)
ansible/group_vars/: all.yaml
contrib/: index.html
docs/labs/: leinelab.md  wigyorilab.md
example/: configuration.yaml
strategies/: qemunetworkstrategy.py  sdmuxstrategy.py  tftpstrategy.py
targets/: bananapi_bpi-r4.yaml  bananapi_bpi-r64.yaml  cznic_turris-omnia.yaml  enterasys_ws-ap3710i.yaml  genexis-pulse-ex400.yaml  genexis_pulse-ex400.yaml  glinet_gl-mt1300.yaml  glinet_gl-mt6000.yaml  hp-msm460.yaml  hpe_msm460.yaml  iei_puzzle-m902.yaml  linksprite_a10-pcduino.yaml  linksys-e8450.yaml  linksys_e8450.yaml  openwrt-one.yaml  openwrt_one.yaml  qemu-armsr-armv8.yaml  qemu-malta-be.yaml  qemu-x86-64.yaml  qemu_armsr-armv8.yaml  qemu_x86-64.yaml  raspberry-pi-3b.yaml  rpi-4.yaml  tplink-1043.yaml  tplink_tl-wdr3600-v1.yaml  tplink_tl-wdr4300-v1.yaml  tplink_tl-wr1043nd-v3.yaml  tplink_tl-wr1043nd-v4.yaml  tplink_tl-wr842n-v3.yaml  turris-omnia.yaml
tests/: conftest.py  test_apk.py  test_base.py  test_lan.py  test_network_security.py  test_opkg.py  test_system_health.py  test_wan.py  test_wifi.py
(+4 files in other folders)
