[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "labgrid>=25.0",
    "pytest>=8.4.1",
    "pytest-harvest>=1.10.5",
]

[tool.uv.sources]
labgrid = { git = "https://github.com/aparcar/labgrid.git" }
