[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "labgrid>=25.0",
    "pytest>=8.4.1",
    "pytest-check>=2.5.3",
    "pytest-harvest>=1.10.5",
]

[tool.uv.sources]
labgrid = { git = "https://github.com/aparcar/labgrid.git", branch = "aparcar/staging" }

[dependency-groups]
dev = ["allure-pytest>=2.14.3", "isort>=6.0.1", "ruff>=0.12.0"]
